--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@ Me gusta entender cómo funcionan las cosas. Me considero una persona versátil,
 
     </main>
             <footer>
-            <p>2026 Matías Villalobos</p>
+            <p>2026 Matías Villalobos - Chile</p>
         </footer>
 </body>
 </html>
